--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Your age in days</h2>
         <p id="error-txt">Please input year of birth</p>
         <div class="container">
-            <input type="text" placeholder="Enter year of birth" id="">
+            <input type="text" placeholder="Enter year of birth" id="input-el">
             <div>
                 <button class="convert" onclick="ageInDays()">click me</button>
             </div>
@@ -21,10 +21,7 @@
                 <button class="reset" onclick="reset()">reset</button>
             </div>
         </div>
-
-        <div class="container">
-            <div id="result"></div>
-        </div>
+        <p>You are: <span id="age">12300</span> days old</p>
     </div>
 
     <script src='./assets/scripts/script.js'></script>
