add javascript validation to the project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container-1">
         <h2>Your age in days</h2>
         <p id="error-txt">Please input year of birth</p>
+        <p id="error-el">Not a valid year</p>
         <div class="container">
             <input type="text" placeholder="Enter year of birth" id="input-el">
             <div>
@@ -21,7 +22,7 @@
                 <button class="reset" onclick="reset()">reset</button>
             </div>
         </div>
-        <p>You are: <span id="age">12300</span> days old</p>
+        <p id="display-el">You are: <span id="age"></span> days old</p>
     </div>
 
     <script src='./assets/scripts/script.js'></script>
